# dtee

./: .appveyor.yml  .gitattributes  .gitignore  .lcovrc  .readthedocs.yaml  .travis.yml  ARCHITECTURE.md  GNUmakefile  INSTALL.md  Makefile  README.md  README.rst  cronty  dtee  meson.build  meson_options.txt  release_date.py
docs/: GNUmakefile  Makefile  architecture.rst  changelog.rst  check_version.py  conf.py  dependencies.rst  index.rst  install.rst  limitations.rst  manual.rst  meson.build  packages.rst  version_check.py
i18n/: LINGUAS  POTFILES  en.po  en_US.po  fr.po  meson.build
src/: application.cc  application.cpp  application.h  application_command_line.cc  command_line.cc  command_line.cpp  command_line.h  copy.cc  copy.h  copyright.h.in  coverage.h  cron.cc  cron.h  dispatch.cc  dispatch.cpp  dispatch.h  exceptions.cc  exceptions.h  file_output.cc  file_output.cpp  file_output.h  gcov.h  i18n.h  input.cc  input.cpp  input.h  main.cc  main.cpp  meson.build  output.h  platform.h  print_error.cc  print_error.cpp  print_error.h  process.cc  process.cpp  process.h  result_handler.h  signal_block.cc  signal_block.h  (+20 more)
tests/: bindtextdomain-override.c  closed-pipe-writer.c  command-exit-code.run  command-exit-code.sh  command-kill-ppid-sighup.com.txt  command-kill-ppid-sighup.sh  command-kill-ppid-sigint-ignore-sigint.err.txt  command-kill-ppid-sigint-ignore-sigint.run  command-kill-ppid-sigint-ignore-sigint.sh  command-kill-ppid-sigint.sh  command-kill-ppid-sigkill.out.txt  command-kill-ppid-sigkill.sh  command-kill-ppid-sigquit.com.txt  command-kill-ppid-sigquit.sh  command-kill-ppid-sigterm.out.txt  command-kill-ppid-sigterm.sh  command-not-executable.com.txt  command-not-executable.sh  command-not-found.com.txt  command-not-found.err.txt  command-not-found.sh  command-sighup.out.txt  command-sighup.sh  command-sigint-ignore-sigint.err.txt  command-sigint-ignore-sigint.out.txt  command-sigint-ignore-sigint.sh  command-sigint-self-kill-failure.com.txt  command-sigint-self-kill-failure.sh  command-sigint.run  command-sigint.sh  command-sigkill.com.txt  command-sigkill.run  command-sigkill.sh  command-sigquit.com.txt  command-sigquit.sh  command-sigterm.com.txt  command-sigterm.out.txt  command-sigterm.sh  command-write-after-ppid-exit.com.txt  command-write-after-ppid-exit.err.txt  (+713 more)
tests/basic/: cron-throw-exception.com.txt  cron-throw-exception.run  cron-throw-exception.sh  file-combined-append-existing.sh  file-combined-append-new.run  file-combined-append-new.sh  file-combined-overwrite-existing.sh  file-combined-overwrite-new.sh  file-stderr-append-existing.sh  file-stderr-append-new.file.err-append.txt  file-stderr-append-new.sh  file-stderr-overwrite-existing.sh  file-stderr-overwrite-new.file.err-overwrite.txt  file-stderr-overwrite-new.sh  file-stdout-append-existing.sh  file-stdout-append-new.sh  file-stdout-overwrite-existing.sh  file-stdout-overwrite-new.file.out-overwrite.txt  file-stdout-overwrite-new.sh  generic-run.sh  help-cronty.sh  help-dtee.sh  interleaved-characters.com.txt  meson.build  noargs-cronty.sh  noargs-dtee.sh  passthrough-stderr.com.txt  passthrough-stdout-stderr1.run  passthrough-stdout-stderr1.sh  passthrough-stdout-stderr2.run  passthrough-stdout.com.txt  throw-exception.com.txt  throw-exception.err.txt  throw-exception.run  throw-exception.sh  version.sh
tests/command/: cron-exit-code-0-no-stderr.sh  cron-exit-code-0-stderr.com.txt  cron-exit-code-0-stderr.err.txt  cron-exit-code-0-stderr.run  cron-exit-code-42-no-stderr.com.txt  cron-exit-code-42-no-stderr.err.txt  cron-exit-code-42-no-stderr.sh  cron-exit-code-42-stderr.com.txt  cron-exit-code-42-stderr.err.txt  cron-kill-ppid-sighup-self-kill-failure.com.eval.txt  cron-kill-ppid-sighup-self-kill-failure.err.eval.txt  cron-kill-ppid-sighup-self-kill-failure.out.txt  cron-kill-ppid-sighup-self-kill-failure.sh  cron-kill-ppid-sighup.com.eval.txt  cron-kill-ppid-sighup.err.eval.txt  cron-kill-ppid-sighup.sh  cron-kill-ppid-sigint-ignore-sigint.com.txt  cron-kill-ppid-sigint-ignore-sigint.err.txt  cron-kill-ppid-sigint-ignore-sigint.run  cron-kill-ppid-sigint-ignore-sigint.sh  cron-kill-ppid-sigint-self-kill-failure.com.eval.txt  cron-kill-ppid-sigint-self-kill-failure.err.eval.txt  cron-kill-ppid-sigint-self-kill-failure.out.txt  cron-kill-ppid-sigint-self-kill-failure.sh  cron-kill-ppid-sigint.com.eval.txt  cron-kill-ppid-sigint.sh  cron-kill-ppid-sigkill.sh  cron-kill-ppid-sigquit.sh  cron-kill-ppid-sigterm-self-kill-failure.com.eval.txt  cron-kill-ppid-sigterm-self-kill-failure.err.eval.txt  cron-kill-ppid-sigterm-self-kill-failure.out.txt  cron-kill-ppid-sigterm-self-kill-failure.sh  cron-kill-ppid-sigterm.com.eval.txt  cron-kill-ppid-sigterm.err.eval.txt  cron-kill-ppid-sigterm.sh  cron-not-executable.com.txt  cron-not-executable.sh  cron-not-found.com.txt  cron-not-found.sh  cron-sighup.sh  (+63 more)
tests/fork/: cron-dup2-failure.com.txt  cron-dup2-failure.err.txt  cron-dup2-failure.sh  cron-fork-failure.com.txt  cron-fork-failure.sh  cron-report-extra-fd.com.txt  cron-report-extra-fd.err.txt  cron-report-extra-fd.file.com-overwrite.txt  cron-report-extra-fd.file.out-append.txt  cron-report-extra-fd.file.out-overwrite.txt  cron-report-extra-fd.sh  cron-report-no-stdin.com.txt  cron-report-no-stdin.file.com-append.txt  cron-report-no-stdin.file.com-overwrite.txt  cron-report-no-stdin.file.out-overwrite.txt  cron-report-no-stdin.out.txt  cron-report-no-stdin.sh  cron-report.com.txt  cron-report.err.txt  cron-report.file.com-overwrite.txt  cron-report.file.err-append.txt  cron-report.file.out-append.txt  cron-report.out.txt  cron-report.sh  cron-sigaction-failure.com.eval.txt  cron-sigaction-failure.err.eval.txt  cron-sigaction-failure.out.txt  cron-sigaction-failure.sh  cron-sigaction-query-failure.com.eval.txt  cron-sigaction-query-failure.err.eval.txt  cron-sigaction-query-failure.sh  cron-sigaction-restart-already-set.com.txt  cron-sigaction-restart-already-set.err.txt  cron-sigaction-restart-already-set.sh  cron-sigaction-set-restart-failure.com.eval.txt  (+56 more)
tests/i18n/: help-cronty.sh  (+31 more)
(+545 files in other folders)
