source_files = files([
		'application.cc',
		'command_line.cc',
		'dispatch.cc',
		'cron.cc',
		'file_output.cc',
		'input.cc',
		'main.cc',
		'print_error.cc',
		'process.cc',
		'signal_block.cc',
		'signal_handler.cc',
		'stream_output.cc',
		'temp_directory.cc',
		'temp_file.cc',
		'temp_filename_pattern.cc',
	]) + [
		vcs_tag(input: 'version.h.in', output: 'version.h'),
	]
