source_files = files([
		'application.cpp',
		'command_line.cpp',
		'dispatch.cpp',
		'cron.cpp',
		'file_output.cpp',
		'input.cpp',
		'main.cpp',
		'print_error.cpp',
		'process.cpp',
		'signal_block.cpp',
		'signal_handler.cpp',
		'stream_output.cpp',
		'temp_directory.cpp',
		'temp_file.cpp',
		'temp_filename_pattern.cpp',
	]) + [
		custom_target(input: 'copyright.h.in', output: 'copyright.h', capture: true,
			command: [find_program('sed'), 's/@COPYRIGHT_YEARS@/' + copyright_years + '/', files('copyright.h.in')]),
		vcs_tag(input: 'version.h.in', output: 'version.h'),
	]
